force-app/main/default/objects/OLP_Worker__c/OLP_Worker__c.object-meta.xml
<CustomObject>
    <label>OLP Worker</label>
    <nameField>
        <displayFormat>OLP-W-{0000000}</displayFormat>
        <label>OLP Worker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OLP Worker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>