force-app/main/default/objects/OLP_Worker__c/fields/DML_Operation__c.field-meta.xml
<CustomField>
    <fullName>DML_Operation__c</fullName>
    <label>DML Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INS</fullName>
            </value>
            <value>
                <fullName>UPDT</fullName>
            </value>
            <value>
                <fullName>UPST</fullName>
            </value>
            <value>
                <fullName>DLT</fullName>
            </value>
            <value>
                <fullName>UNDLT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>