force-app/main/default/objects/OLP_Worker__c/fields/Hold_Until__c.field-meta.xml
<CustomField>
    <fullName>Hold_Until__c</fullName>
    <description>Hold processing for a particular unit of work until a designated time. Allows for a flexible delay for execution</description>
    <label>Hold Until</label>
    <type>DateTime</type>
</CustomField>