force-app/main/default/objects/OLP_Worker__c/fields/JSON_Parameters__c.field-meta.xml
<CustomField>
    <fullName>JSON_Parameters__c</fullName>
    <label>JSON Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>