force-app/main/default/objects/OLP_Worker__c/fields/OLP_Run__c.field-meta.xml
<CustomField>
    <fullName>OLP_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OLP Run</label>
    <referenceTo>OLP_Run__c</referenceTo>
    <relationshipLabel>OLP Worker</relationshipLabel>
    <relationshipName>OLP_Worker</relationshipName>
    <type>Lookup</type>
</CustomField>