force-app/main/default/objects/OLP_Worker__c/fields/Scheduled_Interval__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Interval__c</fullName>
    <label>Scheduled Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 Minutes</fullName>
                <default>true</default>
                <label>15 Minutes</label>
            </value>
            <value>
                <fullName>2 Hours</fullName>
            </value>
            <value>
                <fullName>6 Hours</fullName>
            </value>
            <value>
                <fullName>24 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>