force-app/main/default/objects/OLP_Worker__c/fields/Self_Destruct__c.field-meta.xml
<CustomField>
    <fullName>Self_Destruct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Destruct</label>
    <type>Checkbox</type>
</CustomField>