force-app/main/default/objects/OLP_Worker__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>SObject</fullName>
            </value>
            <value>
                <fullName>Apex Executable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>