force-app/main/default/objects/OLP_Worker__c/listViews/All_OLP_Workers.listView-meta.xml
<ListView>
    <fullName>All_OLP_Workers</fullName>
    <columns>NAME</columns>
    <columns>DML_Operation__c</columns>
    <columns>JSON_Parameters__c</columns>
    <columns>Class__c</columns>
    <columns>Flow__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All OLP Workers</label>
</ListView>